<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImgView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image_of_the_product"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/priceTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/productImgView"
            app:layout_constraintTop_toBottomOf="@+id/productName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/textview"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/productImgView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addToCartBtn"
            android:layout_width="156dp"
            android:layout_height="43dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_to_cart"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buyNowBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.938" />

        <Button
            android:id="@+id/buyNowBtn"
            android:layout_width="113dp"
            android:layout_height="43dp"
            android:layout_marginStart="56dp"
            android:text="@string/buy_now"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.937" />

        <TextView
            android:id="@+id/brandTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            app:layout_constraintBaseline_toBaselineOf="@+id/priceTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toEndOf="@+id/priceTxtView" />

        <TextView
            android:id="@+id/brandValTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            app:layout_constraintBaseline_toBaselineOf="@+id/brandTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toEndOf="@+id/brandTxtView" />

        <TextView
            android:id="@+id/idTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toEndOf="@+id/productImgView"
            app:layout_constraintTop_toBottomOf="@+id/priceTxtView" />

        <TextView
            android:id="@+id/prodDescTextView"
            android:layout_width="249dp"
            android:layout_height="117dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/textview"
            app:layout_constraintBottom_toTopOf="@+id/addToCartBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/productImgView"
            app:layout_constraintTop_toBottomOf="@+id/idTxtView"
            app:layout_constraintVertical_bias="0.523" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>